--- a/pade2.html
+++ b/pade2.html
@@ -12,7 +12,7 @@
         <div class="img-conteiner">
         <img src="img/arsen 2.0.jfif" alt="фото арсена" width="200">
         </div>
-    <p>Болат Арсен 2007 жылы 22-інші Желтоқсанда <span> Қазақстан республикасының Қызылорда қаласында дүниеге келген </span> (қазіргі жасы 17-де). Оқып жатқан мектебі Абай атындағы Дарынды балаларга арналган мектеп. Қатысып жүрген Спорт түрі БОКС, қатысып жүргеніне 1 жарым жыл болған</p>
+    <p>Болат Арсен 2007 жылы 22-інші Желтоқсанда <span> Қазақстан республикасының Қызылорда қаласында дүниеге келген </span> (жасы 17-де). Оқып жатқан мектебі Абай атындағы Дарынды балаларга арналган мектеп.</p>
 </div>
 </body>
 </html>
